force-app/main/default/objects/Account/fields/MediateAccount__c.field-meta.xml
<CustomField>
    <fullName>MediateAccount__c</fullName>
    <label>MediateAccount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11111210</fullName>
                <label>현금(점포송금)</label>
            </value>
            <value>
                <fullName>11311010</fullName>
                <label>외상매출금-국판_일반</label>
            </value>
            <value>
                <fullName>11311020</fullName>
                <label>외상매출금-국판_신용카드</label>
            </value>
            <value>
                <fullName>11311080</fullName>
                <label>외상매출금-국판_가상계좌입금</label>
            </value>
            <value>
                <fullName>11311990</fullName>
                <label>외상매출금-기타</label>
            </value>
            <value>
                <fullName>11321010</fullName>
                <label>외화외상매출금-수출(Local)</label>
            </value>
            <value>
                <fullName>11321020</fullName>
                <label>외화외상매출금-직수출</label>
            </value>
            <value>
                <fullName>11511010</fullName>
                <label>미수금</label>
            </value>
            <value>
                <fullName>11511020</fullName>
                <label>미수금-신용카드</label>
            </value>
            <value>
                <fullName>11511030</fullName>
                <label>미수금-환급금(인사)</label>
            </value>
            <value>
                <fullName>11511040</fullName>
                <label>미수금-상품권</label>
            </value>
            <value>
                <fullName>11511050</fullName>
                <label>미수금-관세</label>
            </value>
            <value>
                <fullName>11511090</fullName>
                <label>미수금-보험금(인사)</label>
            </value>
            <value>
                <fullName>11511100</fullName>
                <label>미수금-우리사주</label>
            </value>
            <value>
                <fullName>11511130</fullName>
                <label>미수금-인사</label>
            </value>
            <value>
                <fullName>11511160</fullName>
                <label>미수금-PG</label>
            </value>
            <value>
                <fullName>11531990</fullName>
                <label>미수수익-기타</label>
            </value>
            <value>
                <fullName>21611060</fullName>
                <label>선수금-온라인몰</label>
            </value>
            <value>
                <fullName>91161020</fullName>
                <label>자금운영조정계정(RECON)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>