force-app/main/default/objects/Account/fields/mgtNo__c.field-meta.xml
<CustomField>
    <fullName>mgtNo__c</fullName>
    <label>mgtNo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>