force-app/main/default/objects/Account/fields/MonthlySales__c.field-meta.xml
<CustomField>
    <fullName>MonthlySales__c</fullName>
    <label>MonthlySales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>