force-app/main/default/objects/Account/fields/multUsnUpsoYn__c.field-meta.xml
<CustomField>
    <fullName>multUsnUpsoYn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>multUsnUpsoYn</label>
    <type>Checkbox</type>
</CustomField>