force-app/main/default/objects/Account/fields/NameAlias__c.field-meta.xml
<CustomField>
    <fullName>NameAlias__c</fullName>
    <description>MDM 고객양칭명(변경)</description>
    <label>NameAlias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>