force-app/main/default/objects/Account/fields/NameKor__c.field-meta.xml
<CustomField>
    <fullName>NameKor__c</fullName>
    <label>NameKor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>