force-app/main/default/objects/Account/fields/NetAmountMilion__c.field-meta.xml
<CustomField>
    <fullName>NetAmountMilion__c</fullName>
    <label>NetAmountMilion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>