force-app/main/default/objects/Account/fields/NumberofChildren__c.field-meta.xml
<CustomField>
    <fullName>NumberofChildren__c</fullName>
    <label>Number Of Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>