force-app/main/default/objects/Account/fields/NumberOfStore__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStore__c</fullName>
    <label>Number Of Store</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>