force-app/main/default/objects/Account/fields/NumDailyMeal__c.field-meta.xml
<CustomField>
    <fullName>NumDailyMeal__c</fullName>
    <label>NumDailyMeal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>