force-app/main/default/objects/Account/fields/odd_txt__c.field-meta.xml
<CustomField>
    <fullName>odd_txt__c</fullName>
    <label>odd_txt</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>