force-app/main/default/objects/Account/fields/OpeningDate__c.field-meta.xml
<CustomField>
    <fullName>OpeningDate__c</fullName>
    <label>Opening Date</label>
    <type>Date</type>
</CustomField>