force-app/main/default/objects/Account/fields/OperationContact__c.field-meta.xml
<CustomField>
    <fullName>OperationContact__c</fullName>
    <label>OperationContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>