force-app/main/default/objects/Account/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <description>운영형태 (튼튼사업부SMA)</description>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>직영(대리점)</fullName>
            </value>
            <value>
                <fullName>직영(직거래)</fullName>
            </value>
            <value>
                <fullName>위탁</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>