force-app/main/default/objects/Account/fields/opnSvcNm__c.field-meta.xml
<CustomField>
    <fullName>opnSvcNm__c</fullName>
    <label>opnSvcNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>