force-app/main/default/objects/Account/fields/OTD__c.field-meta.xml
<CustomField>
    <fullName>OTD__c</fullName>
    <label>OTD</label>
    <length>15</length>
    <type>Text</type>
</CustomField>