force-app/main/default/objects/Account/fields/OurSales__c.field-meta.xml
<CustomField>
    <fullName>OurSales__c</fullName>
    <label>Our Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>