force-app/main/default/objects/Account/fields/oven_poss_yn__c.field-meta.xml
<CustomField>
    <fullName>oven_poss_yn__c</fullName>
    <label>oven_poss_yn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>보유</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>미보유</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>