force-app/main/default/objects/Account/fields/PaymentAccountCode__c.field-meta.xml
<CustomField>
    <fullName>PaymentAccountCode__c</fullName>
    <description>MDM 지급처코드</description>
    <label>Payment Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>