force-app/main/default/objects/Account/fields/PaymentAccountName__c.field-meta.xml
<CustomField>
    <fullName>PaymentAccountName__c</fullName>
    <label>PaymentAccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>