force-app/main/default/objects/Account/fields/PICCode__c.field-meta.xml
<CustomField>
    <fullName>PICCode__c</fullName>
    <description>MDM 담당자코드</description>
    <label>PICCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>