force-app/main/default/objects/Account/fields/pmeal_cst__c.field-meta.xml
<CustomField>
    <fullName>pmeal_cst__c</fullName>
    <label>pmeal_cst</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>