force-app/main/default/objects/Account/fields/PriceGroup__c.field-meta.xml
<CustomField>
    <fullName>PriceGroup__c</fullName>
    <label>PriceGroup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>외식대리점</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>외식유통점</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>급식유통점</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>급식키즈</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>급식직거래</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>외식직거래</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>전문점</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>프랜차이즈</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>관계사 기타</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>이체</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>관계사 제조(제당)</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>관계사 제조(푸드빌)</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>소매</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>미지정</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>