force-app/main/default/objects/Account/fields/PriceGroupFromDate__c.field-meta.xml
<CustomField>
    <fullName>PriceGroupFromDate__c</fullName>
    <label>PriceGroupFromDate</label>
    <type>Date</type>
</CustomField>