force-app/main/default/objects/Account/fields/ProductLoadingCondition__c.field-meta.xml
<CustomField>
    <fullName>ProductLoadingCondition__c</fullName>
    <description>MDM 상품적재조건</description>
    <label>ProductLoadingCondition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>