force-app/main/default/objects/Account/fields/ProposeContact__c.field-meta.xml
<CustomField>
    <fullName>ProposeContact__c</fullName>
    <label>ProposeContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>