force-app/main/default/objects/Account/fields/PV_CARDFRATE__c.field-meta.xml
<CustomField>
    <fullName>PV_CARDFRATE__c</fullName>
    <label>PV_CARDFRATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>