force-app/main/default/objects/Account/fields/PV_CSHAPE__c.field-meta.xml
<CustomField>
    <fullName>PV_CSHAPE__c</fullName>
    <label>PV_CSHAPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>