force-app/main/default/objects/Account/fields/PV_CUHR1__c.field-meta.xml
<CustomField>
    <fullName>PV_CUHR1__c</fullName>
    <label>PV_CUHR1</label>
    <type>Date</type>
</CustomField>