force-app/main/default/objects/Account/fields/PV_DEPRE__c.field-meta.xml
<CustomField>
    <fullName>PV_DEPRE__c</fullName>
    <label>PV_DEPRE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>