force-app/main/default/objects/Account/fields/PV_DONATION__c.field-meta.xml
<CustomField>
    <fullName>PV_DONATION__c</fullName>
    <label>PV_DONATION</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>