force-app/main/default/objects/Account/fields/PV_ECPROFITRATE__c.field-meta.xml
<CustomField>
    <fullName>PV_ECPROFITRATE__c</fullName>
    <label>PV_ECPROFITRATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>