force-app/main/default/objects/Account/fields/PV_EPROFIT__c.field-meta.xml
<CustomField>
    <fullName>PV_EPROFIT__c</fullName>
    <label>PV_EPROFIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>