force-app/main/default/objects/Account/fields/PV_ESALES__c.field-meta.xml
<CustomField>
    <fullName>PV_ESALES__c</fullName>
    <label>PV_ESALES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>