force-app/main/default/objects/Account/fields/PV_ESALESPROFIT__c.field-meta.xml
<CustomField>
    <fullName>PV_ESALESPROFIT__c</fullName>
    <label>PV_ESALESPROFIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>