force-app/main/default/objects/Account/fields/PV_ETCRATE__c.field-meta.xml
<CustomField>
    <fullName>PV_ETCRATE__c</fullName>
    <label>PV_ETCRATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>