force-app/main/default/objects/Account/fields/PV_ETCSALESFEE__c.field-meta.xml
<CustomField>
    <fullName>PV_ETCSALESFEE__c</fullName>
    <label>PV_ETCSALESFEE</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>