force-app/main/default/objects/Account/fields/PV_EXISTSUP__c.field-meta.xml
<CustomField>
    <fullName>PV_EXISTSUP__c</fullName>
    <label>PV_EXISTSUP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>