force-app/main/default/objects/Account/fields/PV_EXPROFITFC__c.field-meta.xml
<CustomField>
    <fullName>PV_EXPROFITFC__c</fullName>
    <label>PV_EXPROFITFC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>