force-app/main/default/objects/Account/fields/PV_EXSALESFC__c.field-meta.xml
<CustomField>
    <fullName>PV_EXSALESFC__c</fullName>
    <label>PV_EXSALESFC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>