force-app/main/default/objects/Account/fields/PV_GPROFITFC__c.field-meta.xml
<CustomField>
    <fullName>PV_GPROFITFC__c</fullName>
    <label>PV_GPROFITFC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>