force-app/main/default/objects/Account/fields/PV_ISCOLFEE__c.field-meta.xml
<CustomField>
    <fullName>PV_ISCOLFEE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_ISCOLFEE</label>
    <type>Checkbox</type>
</CustomField>