force-app/main/default/objects/Account/fields/PV_LIFNR__c.field-meta.xml
<CustomField>
    <fullName>PV_LIFNR__c</fullName>
    <label>PV_LIFNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>