force-app/main/default/objects/Account/fields/PV_LIFNRNM__c.field-meta.xml
<CustomField>
    <fullName>PV_LIFNRNM__c</fullName>
    <label>PV_LIFNRNM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>