force-app/main/default/objects/Account/fields/PV_LOGISRATIO__c.field-meta.xml
<CustomField>
    <fullName>PV_LOGISRATIO__c</fullName>
    <label>PV_LOGISRATIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>