force-app/main/default/objects/Account/fields/PV_NUMPARTNER__c.field-meta.xml
<CustomField>
    <fullName>PV_NUMPARTNER__c</fullName>
    <label>PV_NUMPARTNER</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>