force-app/main/default/objects/Account/fields/PV_NUMSKU__c.field-meta.xml
<CustomField>
    <fullName>PV_NUMSKU__c</fullName>
    <label>PV_NUMSKU</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>