force-app/main/default/objects/Account/fields/PV_ORDERMA__c.field-meta.xml
<CustomField>
    <fullName>PV_ORDERMA__c</fullName>
    <label>PV_ORDERMA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>