force-app/main/default/objects/Account/fields/PV_RESEEARN__c.field-meta.xml
<CustomField>
    <fullName>PV_RESEEARN__c</fullName>
    <label>PV_RESEEARN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>