force-app/main/default/objects/Account/fields/PV_RESESALES__c.field-meta.xml
<CustomField>
    <fullName>PV_RESESALES__c</fullName>
    <label>PV_RESESALES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>