force-app/main/default/objects/Account/fields/PV_SALESPERSTOREFC__c.field-meta.xml
<CustomField>
    <fullName>PV_SALESPERSTOREFC__c</fullName>
    <label>PV_SALESPERSTOREFC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>