force-app/main/default/objects/Account/fields/PV_SHIPTYPE__c.field-meta.xml
<CustomField>
    <fullName>PV_SHIPTYPE__c</fullName>
    <label>PV_SHIPTYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>배송</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>위탁(배송)</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>위탁(자차)</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>자차</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>직송</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>