force-app/main/default/objects/Account/fields/PV_SKUPERSALESFC__c.field-meta.xml
<CustomField>
    <fullName>PV_SKUPERSALESFC__c</fullName>
    <label>PV_SKUPERSALESFC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>