force-app/main/default/objects/Account/fields/PV_SPECIALNOTE__c.field-meta.xml
<CustomField>
    <fullName>PV_SPECIALNOTE__c</fullName>
    <label>PV_SPECIALNOTE</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>