force-app/main/default/objects/Account/fields/PV_STATUSTYPE__c.field-meta.xml
<CustomField>
    <fullName>PV_STATUSTYPE__c</fullName>
    <label>PV_STATUSTYPE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>