force-app/main/default/objects/Account/fields/PV_STORECNT__c.field-meta.xml
<CustomField>
    <fullName>PV_STORECNT__c</fullName>
    <label>PV_STORECNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>