force-app/main/default/objects/Account/fields/PV_SUBSIDY__c.field-meta.xml
<CustomField>
    <fullName>PV_SUBSIDY__c</fullName>
    <label>PV_SUBSIDY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>