force-app/main/default/objects/Account/fields/PV_SUPFEERATE__c.field-meta.xml
<CustomField>
    <fullName>PV_SUPFEERATE__c</fullName>
    <label>PV_SUPFEERATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>