force-app/main/default/objects/Account/fields/PV_SUPPOINT__c.field-meta.xml
<CustomField>
    <fullName>PV_SUPPOINT__c</fullName>
    <label>PV_SUPPOINT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>