force-app/main/default/objects/Account/fields/PV_TEMPTARGET__c.field-meta.xml
<CustomField>
    <fullName>PV_TEMPTARGET__c</fullName>
    <label>PV_TEMPTARGET</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>필수 제출처</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>고객 요청</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>해당 없음</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>