force-app/main/default/objects/Account/fields/PV_TERMF__c.field-meta.xml
<CustomField>
    <fullName>PV_TERMF__c</fullName>
    <label>PV_TERMF</label>
    <type>Date</type>
</CustomField>