force-app/main/default/objects/Account/fields/PV_TERMT__c.field-meta.xml
<CustomField>
    <fullName>PV_TERMT__c</fullName>
    <label>PV_TERMT</label>
    <type>Date</type>
</CustomField>