force-app/main/default/objects/Account/fields/PV_VKGRP__c.field-meta.xml
<CustomField>
    <fullName>PV_VKGRP__c</fullName>
    <label>PV_VKGRP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>168-002</fullName>
                <label>FS남부)부산지점(168-002)</label>
            </value>
            <value>
                <fullName>188-002</fullName>
                <label>시너지)축육(188-002)</label>
            </value>
            <value>
                <fullName>197-002</fullName>
                <label>체인)체인영업팀(197-002)</label>
            </value>
            <value>
                <fullName>Z09-002</fullName>
                <label>외부법인)프레시원_인천(Z09-002)</label>
            </value>
            <value>
                <fullName>203-002</fullName>
                <label>FS서울)경인2지점(203-002)</label>
            </value>
            <value>
                <fullName>204-002</fullName>
                <label>FS서부)충청4지점(204-002)</label>
            </value>
            <value>
                <fullName>232-002</fullName>
                <label>FS개발)FS개발지원팀(232-002)</label>
            </value>
            <value>
                <fullName>251-001</fullName>
                <label>서울)직거래강서지점</label>
            </value>
            <value>
                <fullName>181-003</fullName>
                <label>FS본부)쿠킹클래스(181-003)</label>
            </value>
            <value>
                <fullName>104-002</fullName>
                <label>외식남부)FO중부(104-002)</label>
            </value>
            <value>
                <fullName>124-002</fullName>
                <label>유통)경북지점(124-002)</label>
            </value>
            <value>
                <fullName>151-002</fullName>
                <label>전략)전략사업부(151-002)</label>
            </value>
            <value>
                <fullName>286-001</fullName>
                <label>FS본부)FS인사팀</label>
            </value>
            <value>
                <fullName>107-005</fullName>
                <label>외식남부)FO대구(107-005)</label>
            </value>
            <value>
                <fullName>306-001</fullName>
                <label>상품)소스사업팀(306-001)</label>
            </value>
            <value>
                <fullName>321-001</fullName>
                <label>급식)급식솔루션서울2팀(321-001)</label>
            </value>
            <value>
                <fullName>337-001</fullName>
                <label>FS)급식동부2팀</label>
            </value>
            <value>
                <fullName>316-002</fullName>
                <label>키즈)서부키즈팀(삭제)(316-002)</label>
            </value>
            <value>
                <fullName>347-001</fullName>
                <label>유통중부)유통경인팀(347-001)</label>
            </value>
            <value>
                <fullName>350-001</fullName>
                <label>해외유통사업지원</label>
            </value>
            <value>
                <fullName>352-001</fullName>
                <label>FS중부)경기3지점(352-001)</label>
            </value>
            <value>
                <fullName>358-001</fullName>
                <label>(온라인사업운영파트)(삭제)</label>
            </value>
            <value>
                <fullName>146-006</fullName>
                <label>전략)가공시너지팀(146-006)</label>
            </value>
            <value>
                <fullName>246-003</fullName>
                <label>외식중부)외식중부사업부(246-003)</label>
            </value>
            <value>
                <fullName>247-003</fullName>
                <label>외식중부)외식개발팀(247-003)</label>
            </value>
            <value>
                <fullName>250-003</fullName>
                <label>외식)외식개발2팀(250-003)</label>
            </value>
            <value>
                <fullName>251-003</fullName>
                <label>외식중부)외식솔루션영업팀(251-003)</label>
            </value>
            <value>
                <fullName>253-003</fullName>
                <label>유통중부)유통강남팀(253-003)</label>
            </value>
            <value>
                <fullName>254-003</fullName>
                <label>유통중부)유통강북팀(254-003)</label>
            </value>
            <value>
                <fullName>255-003</fullName>
                <label>외식)외식SU(255-003)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>