force-app/main/default/objects/Account/fields/PVVF_KONDA__c.field-meta.xml
<CustomField>
    <fullName>PVVF_KONDA__c</fullName>
    <label>PVVF_KONDA</label>
    <type>Date</type>
</CustomField>