force-app/main/default/objects/Account/fields/PVVF_KVGR1__c.field-meta.xml
<CustomField>
    <fullName>PVVF_KVGR1__c</fullName>
    <label>PVVF_KVGR1</label>
    <type>Date</type>
</CustomField>