force-app/main/default/objects/Account/fields/PVVF_LOGISCENTER__c.field-meta.xml
<CustomField>
    <fullName>PVVF_LOGISCENTER__c</fullName>
    <label>PVVF_LOGISCENTER</label>
    <type>Date</type>
</CustomField>