force-app/main/default/objects/Account/fields/PVVF_OLD_BIZPLACE_NEW__c.field-meta.xml
<CustomField>
    <fullName>PVVF_OLD_BIZPLACE_NEW__c</fullName>
    <label>PVVF_OLD_BIZPLACE_NEW</label>
    <type>Date</type>
</CustomField>