force-app/main/default/objects/Account/fields/PVVF_PERNR__c.field-meta.xml
<CustomField>
    <fullName>PVVF_PERNR__c</fullName>
    <label>PVVF_PERNR</label>
    <type>Date</type>
</CustomField>