force-app/main/default/objects/Account/fields/PVVF_VKGRP__c.field-meta.xml
<CustomField>
    <fullName>PVVF_VKGRP__c</fullName>
    <label>PVVF_VKGRP</label>
    <type>Date</type>
</CustomField>